# team-algorithms-oop

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp  resourses.qrc  team-algorithms-oop.pro
team-algorithms-oop/: CMakeLists.txt  main.cpp  team-algorithms-oop.pro
team-algorithms-oop/doc/html/: AnyTreeDetail_8hpp_source.html  AnyTree_8hpp_source.html  BSTBase_8hpp_source.html  RedBlackTree_8hpp_source.html  classes.html  classlab_1_1TreeDatabase-members.html  classlab_1_1TreeDatabase.html  classlab_1_1forest_1_1AnyTree.html  classlab_1_1forest_1_1RedBlackTree__coll__graph.map  classlab_1_1forest_1_1SplayTree-members.html  classlab_1_1forest_1_1SplayTree__coll__graph.md5  classlab_1_1forest_1_1SplayTree__inherit__graph.map  classlab_1_1forest_1_1SplayTree__inherit__graph.md5  classlab_1_1forest_1_1UndoableTree.html  classlab_1_1forest_1_1detail_1_1BSTBase__coll__graph.md5  (+20 more)
team-algorithms-oop/gui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
team-algorithms-oop/include/: AnyTree.hpp  RedBlackTree.hpp  SplayTree.hpp  TreeDB.hpp  UndoableTree.hpp
team-algorithms-oop/src/: AnyTree.hpp  AnyTree.tpp  AnyTreeDetail.hpp  BSTBase.hpp  BSTBase.tpp  BSTIterator.hpp  BSTIterator.tpp  BinarySearchTreeIterator.hpp  BinarySearchTreeIterator.tpp  NamespacesDecl.hpp  NodeBase.hpp  NodeTools.hpp  NodeUtilities.hpp  SearchTree.hpp  SearchTreeBase.hpp  SearchTreeBase.tpp  SearchTreeFacade.hpp  TreeBase.hpp  TreeBase.tpp  TreeDB.hpp  TreeDB.tpp  UndoableTree.hpp  UndoableTree.tpp
team-algorithms-oop/tests/: CMakeLists.txt  Tests.cpp  main.cpp
(+256 files in other folders)
